Fix color theme to reflect changes in GLOBAL setting